--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@r-hurricane/wmo-parser": "1.0.0-alpha.1",
+    "@r-hurricane/atcf-parser": "1.0.0-alpha.1",
     "@sendgrid/mail": "^8.1.4",
     "basic-ftp": "^5.0.5",
     "config": "^3.3.12",
