--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
   "devDependencies": {
     "@types/config": "^3.3.5",
     "@types/node": "^22.10.1",
+    "@types/pg": "^8.11.10",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@r-hurricane/wmo-parser": "^1.0.0-alpha.1",
     "@r-hurricane/atcf-parser": "^1.0.0-alpha.1",
+    "@r-hurricane/wmo-parser": "^1.0.0-alpha.1",
     "@sendgrid/mail": "^8.1.4",
     "basic-ftp": "^5.0.5",
     "but-unzip": "^0.1.4",
     "config": "^3.3.12",
     "date-fns": "^4.1.0",
+    "pg": "^8.13.1",
     "shpjs": "^6.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
