--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
   },
   "dependencies": {
     "@r-hurricane/atcf-parser": "^1.0.0-alpha.1",
+    "@r-hurricane/two-parser": "^1.0.0-alpha.1",
     "@r-hurricane/wmo-parser": "^1.0.0-alpha.1",
-    "@sendgrid/mail": "^8.1.4",
     "basic-ftp": "^5.0.5",
-    "but-unzip": "^0.1.4",
     "config": "^3.3.12",
     "date-fns": "^4.1.0",
     "pg": "^8.13.1",
-    "shpjs": "^6.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
