Adding generic shape file parser + pass-through JSON parser.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@r-hurricane/atcf-parser": "^1.0.0-alpha.1",
+    "@r-hurricane/shape-parser": "^1.0.0-alpha.1",
     "@r-hurricane/two-parser": "^1.0.0-alpha.1",
     "@r-hurricane/wmo-parser": "^1.0.0-alpha.1",
     "basic-ftp": "^5.0.5",
