--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "type": "module",
   "private": true,
+  "bin": {
+    "noaactl": "./dist/bin/noaactl.js"
+  },
   "scripts": {
     "build": "npx tsc -p tsconfig.json",
     "test": "npm run build && node --experimental-sqlite dist/index.js"
